<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/top_layout" android:background="@color/colorPrimary" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/close_iv" android:background="?selectableItemBackgroundBorderless" android:padding="5.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:src="@drawable/ic_close" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/deactivate_account" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:text="@string/account_deactivate_info" android:drawableLeft="@drawable/ic_info_blue" android:drawablePadding="5.0dip" />
    <LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_password" android:inputType="textPassword" />
        <EditText android:gravity="center|left|top" android:id="@id/reason_et" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginTop="10.0dip" android:hint="@string/reason_to_deactivate_account" android:inputType="textMultiLine" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <Button android:textColor="@color/colorPrimary" android:id="@id/cancel_bt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="cancel" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            <Button android:textColor="@color/colorPrimary" android:id="@id/ok_bt" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Ok" android:layout_weight="1.0" android:textAllCaps="false" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>